--- a/Cuda.css
+++ b/Cuda.css
@@ -1,22 +1,34 @@
-#mama>div{
+#home>div{
     width: 100%;
     height: 596px;
 }
 
-.first{
+.header{
     width: 100%;
     height: 596px;
     
-    background-image: url(sources/Bg.png)
+    background: #87509C;
 }
-.logo{
-    width: 117px;
-    height: 37px;
+
+.header img {
+    margin-top: 57px;
+    margin-left: 212px;
     float: left;
 }
 
-.menu{
-    clear: both;
-    width: 10px;
+.header #menu {
+    margin-top: 70px;
+    margin-right: 212px;
+    float: right;
+}
+
+#menu{
+    color: white;
     font-family: "TitilliumWeb Regular";
+    font-size: 12px;
+}
+
+#acceuil .text-acceuil {
+    clear: both;
+    
 }
