--- a/Cuda.css
+++ b/Cuda.css
@@ -1,34 +1,40 @@
 #home>div{
     width: 100%;
     height: 596px;
-}
-
-.header{
-    width: 100%;
-    height: 596px;
-    
     background: #87509C;
 }
 
-.header img {
+#home img {
     margin-top: 57px;
     margin-left: 212px;
     float: left;
 }
 
-.header #menu {
+#home #menu {
     margin-top: 70px;
     margin-right: 212px;
     float: right;
 }
 
-#menu{
-    color: white;
+@font-face {
     font-family: "TitilliumWeb Regular";
-    font-size: 12px;
+    src: url('sources/TitilliumWeb-Regular.ttf'):
 }
 
-#acceuil .text-acceuil {
+#menu ul{
+    color: white;
+    font-size: 12px;
+    font-family: "TitilliumWeb Regular";
+    list-style-type: none;
+}
+
+#menu ul li {
+    display: inline;
+    padding: 0 0.5em;
+}
+
+#home h1 {
     clear: both;
-    
+    color: white;
+    text-align: center;
 }
