--- a/Cuda.css
+++ b/Cuda.css
@@ -1,16 +1,21 @@
-#home>div{
+#home {
     width: 100%;
     height: 596px;
     background: #87509C;
 }
 
-#home img {
+#home #header {
+    width: 100%;
+    height: 80px;
+}
+
+#header img {
     margin-top: 57px;
     margin-left: 212px;
     float: left;
 }
 
-#home #menu {
+#header #menu {
     margin-top: 70px;
     margin-right: 212px;
     float: right;
@@ -33,8 +38,39 @@
     padding: 0 0.5em;
 }
 
-#home h1 {
+#home #home-body {
     clear: both;
+    margin-top: 13%;
+    width: 100%;
+    height: 50px;
+}
+#home-title h1 {
     color: white;
     text-align: center;
+    font-family: "TitilliumWeb Regular"
+}
+
+#home #home-button {
+    margin-top: 5%;
+    margin-right: 40%;
+    margin-left: 40%;
+    height: 50px;
+    background: orange;
+    
+    
+
+}
+
+#home-button p {
+    padding-top: 8%;
+    text-align: center;
+    color: white;
+    
+}
+
+#service {
+    width: 100%;
+    height: 596px;
+    
+    background: green;
 }
