--- a/Cuda.css
+++ b/Cuda.css
@@ -21,21 +21,25 @@
     float: right;
 }
 
-@font-face {
-    font-family: "TitilliumWeb Regular";
-    src: url('sources/TitilliumWeb-Regular.ttf'):
-}
-
 #menu ul{
     color: white;
     font-size: 12px;
-    font-family: "TitilliumWeb Regular";
+    font-family: "Titillium Web Normal";
     list-style-type: none;
 }
 
 #menu ul li {
     display: inline;
-    padding: 0 0.5em;
+    padding: 0.75em 1.5em;
+}
+
+#menu ul li:hover {
+    display: inline;
+    padding: 0.75em 1.5em;
+    height: 30px;
+    width: 40px;
+    background: #643A79;
+    border-radius: 3px;
 }
 
 #home #home-body {
@@ -56,13 +60,14 @@
     margin-left: 40%;
     height: 50px;
     background: orange;
+    border-radius: 5px;
     
     
 
 }
 
 #home-button p {
-    padding-top: 8%;
+    padding-top: 6.5%;
     text-align: center;
     color: white;
     
@@ -72,5 +77,20 @@
     width: 100%;
     height: 596px;
     
-    background: green;
+    background: #17c2a4;
+}
+
+#service #service-title {
+    padding-top: 100px;
+}
+
+#service-title h1 {
+    text-align: center;
+    color: white;
+}
+
+#service-title p {
+    padding-top: 2%;
+    text-align: center;
+    color: white;
 }
