--- a/Cuda.css
+++ b/Cuda.css
@@ -16,26 +16,24 @@
 }
 
 #header #menu {
-    margin-top: 70px;
+    margin-top: 30px;
     margin-right: 212px;
     float: right;
 }
 
-#menu ul{
-    color: white;
-    font-size: 12px;
-    font-family: "Titillium Web Normal";
-    list-style-type: none;
-}
 
 #menu ul li {
     display: inline;
-    padding: 0.75em 1.5em;
+    padding: 0.75px 1.5px;
+    color: white;
+    font-size: 16px;
+    font-family: "Titillium Web", sans-serif;
+    list-style-type: none;
 }
 
 #menu ul li:hover {
     display: inline;
-    padding: 0.75em 1.5em;
+    padding: 0.75px 1.5px
     height: 30px;
     width: 40px;
     background: #643A79;
@@ -51,7 +49,7 @@
 #home-title h1 {
     color: white;
     text-align: center;
-    font-family: "TitilliumWeb Regular"
+    font-family: "Titillium Web", sans-serif;
 }
 
 #home #home-button {
@@ -70,6 +68,7 @@
     padding-top: 6.5%;
     text-align: center;
     color: white;
+    font-family: "Titillium Web", sans-serif;
     
 }
 
@@ -81,16 +80,48 @@
 }
 
 #service #service-title {
-    padding-top: 100px;
+    padding-top: 30px;
 }
 
 #service-title h1 {
     text-align: center;
     color: white;
+    font-family: "Titillium Web", sans-serif;
+}
+
+#service-title hr {
+    width: 100px;
+    height: 5px;
+    color: black;
+    background-color: #14a58c;
+    border: none;
 }
 
 #service-title p {
-    padding-top: 2%;
     text-align: center;
     color: white;
+    font-family: "Titillium Web", sans-serif;
+}
+
+#option-service {
+    text-align: center;
+}
+
+#option-service ul {
+    display: inline-block;
+    padding: 0 5px;
+    list-style: none;
+}
+
+#option-service ul li {
+    color: white;
+    text-align: center;
+    font-family: "Titillium Web", sans-serif;
+}
+
+#team {
+    width: 100%;
+    height: 914px;
+    
+    background: #e7f1f8;
 }
