--- a/Cuda.css
+++ b/Cuda.css
@@ -15,7 +15,7 @@
     float: left;
 }
 
-#header #menu {
+#home #menu {
     margin-top: 30px;
     margin-right: 212px;
     float: right;
@@ -132,15 +132,22 @@
     text-align: center;
 }
 
+#team-title h1{
+    padding-top: 50px;
+}
+
 #team-title hr {
     width: 100px;
     height: 5px;
-    background-color: #14a58c;
+    background-color: #c8d9e5;
     border: none;
 }
 
+#team-title p {
+    padding-top: 20px;
+}
 #team #team-picture {
-    padding-top: 50px;
+    padding-top: 80px;
 }
 
 #team-picture {
@@ -168,4 +175,132 @@
     display: inline;
     padding-right: 2px;
     text-align: center;
+}
+
+#skills {
+    width: 100%;
+    height: 655px;
+    background: #ffffff;
+}
+
+#skills-title {
+    text-align: center;
+}
+
+#skills-title h1 {
+    padding-top: 50px;
+}
+
+#skills-title hr {
+    width: 100px;
+    height: 5px;
+    background-color: #c8d9e5;
+    border: none;
+}
+
+#skills-img {
+    text-align: center;
+    padding-top: 80px;
+}
+
+#skills-img ul {
+    display: inline-block;
+    list-style: none;
+}
+
+#portfolio {
+    width: 100%;
+    height: 1423px;
+    background: #ffdd99;
+}
+
+#portfolio-title {
+    text-align: center;
+}
+
+#portfolio-title h1 {
+    padding-top: 100px;
+}
+
+#portfolio-title hr {
+    width: 100px;
+    height: 5px;
+    background-color: #e5c37f;
+    border: none;
+}
+
+#portfolio-title ul {
+    padding-top: 40px;
+}
+
+#portfolio-title ul li {
+    list-style: none;
+    display: inline;
+    padding: 7px 8px;
+    width: 8px;
+    height: 7px;
+    background: #e5c37f;
+    border-radius: 2px;
+}
+#portfolio-title ul li:hover {
+    list-style: none;
+    display: inline;
+    padding: 7px 8px;
+    width: 8px;
+    height: 7px;
+    background: white;
+    border-radius: 2px;
+}
+
+#pc1-pc2 {
+    text-align: center;
+}
+
+#pc1-pc2 ul {
+    padding-top: 30px;
+    display: inline-block;
+    list-style: none;
+}
+
+#pc3-pc4 {
+    text-align: center;
+}
+
+#pc3-pc4 ul {
+    padding-top: 30px;
+    display: inline-block;
+    list-style: none;
+}
+
+#portfolio-button {
+    margin-top: 70px;
+    margin-right: 40%;
+    margin-left: 40%;
+    height: 50px;
+    background: green;
+    border-radius: 5px;
+    text-align: center;
+}
+
+#portfolio-button p {
+    color: white;
+    padding-top: 7%;
+}
+
+#peoplesay {
+    width: 100%;
+    height: 895px;
+    background: #d74680;
+}
+
+#peoplesay #peoplesay-title {
+    padding-top: 30px;
+}
+
+#peoplesay-title {
+    text-align: center;
+}
+
+#peoplesay-title h1{
+    color: white;
 }
